Add archive file name to gradle buildZip command

--- a/src/setup/deployment/raw-code/functions/hellojava/aws/build.gradle
+++ b/src/setup/deployment/raw-code/functions/hellojava/aws/build.gradle
@@ -43,6 +43,7 @@ tasks.withType(Javadoc) {
 }
 
 task buildZip(type: Zip) {
+	archiveFileName='hellojava.zip'
     into('lib') {
         from(jar)
         from(configurations.runtimeClasspath)
