Update build.gradle for container deployment

--- a/src/setup/deployment/raw-code/functions/hellojava/aws/build.gradle
+++ b/src/setup/deployment/raw-code/functions/hellojava/aws/build.gradle
@@ -34,6 +34,12 @@ publishing {
     }
 }
 
+jar {
+	manifest {
+		attributes 'Main-Class': 'org.hellojava.Handler'
+	}
+}
+
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
