--- a/src/setup/deployment/raw-code/functions/hellojava/aws/build.gradle
+++ b/src/setup/deployment/raw-code/functions/hellojava/aws/build.gradle
@@ -55,3 +55,10 @@ task buildZip(type: Zip) {
         from(configurations.runtimeClasspath)
     }
 }
+
+task copyRuntimeDependencies(type: Copy) {
+    from configurations.runtimeClasspath
+    into 'build/dependency'
+}
+
+build.dependsOn copyRuntimeDependencies
